<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.AllDetailActivity">

    <LinearLayout
        android:id="@+id/ll1"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/img_back"
            android:layout_width="40sp"
            android:layout_height="40sp"
            android:layout_margin="10dp"
            android:src="@drawable/ic_back" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/recipe"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <View
            android:layout_width="40sp"
            android:layout_height="40sp"
            android:layout_margin="10dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll1">

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/item_img"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            app:riv_corner_radius="10dp" />

        <TextView
            android:id="@+id/item_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:gravity="center"
            android:text="@string/test"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/recipe"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_margin="6dp">

            <TextView
                android:id="@+id/item_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/test"
                android:textSize="16sp" />
        </ScrollView>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_done"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="20dp"
            android:background="@drawable/btn_bg"
            android:text="@string/done"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textStyle="bold" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>